feat: score frame

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,4 +2,14 @@
   background-image: radial-gradient(circle at center top, rgb(31, 55, 87) 20%, rgb(19, 21, 55) 100%);
   color: white;
   font-family: "Barlow Semi Condensed", sans-serif;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.score-container {
+  padding-top: 50px;
+  width: 50%;
+  min-width: 600px;
 }
