feat: hands titles for advanced game

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="content">
   <div class="score-container">
-    <app-score [score]="2"></app-score>
+    <app-score [score]="2" [gameType]="gameTypeEnum.Advanced"></app-score>
   </div>
 </div>
