--- a/src/score/score.component.html
+++ b/src/score/score.component.html
@@ -1,12 +1,9 @@
 <div class="score-frame">
-  <div class="title">
-    <div>rock</div>
-    <div>paper</div>
-    <div>scissors</div>
+  <div class="title" [ngClass]="{'title-basic': gameType === gameTypeEnum.Basic, 'title-advanced': gameType === gameTypeEnum.Advanced}">
+    <div *ngFor="let label of (gameType | gameHands)">{{label}}</div>
   </div>
   <div class="score-container">
     <div class="score-label">score</div>
     <div class="score-value">{{score}}</div>
   </div>
-
 </div>
