feat: button component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-.content {
+.container{
   background-image: radial-gradient(circle at center top, rgb(31, 55, 87) 20%, rgb(19, 21, 55) 100%);
   color: white;
   font-family: "Barlow Semi Condensed", sans-serif;
@@ -8,8 +8,17 @@
   align-items: center;
 }
 
-.score-container {
-  padding-top: 50px;
+.content {
   width: 50%;
   min-width: 600px;
+}
+
+.score-container {
+  padding-top: 50px;
+}
+
+.buttons-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
