refactor: use scss instead of css

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-.container{
+.container {
   background-image: radial-gradient(circle at center top, rgb(31, 55, 87) 20%, rgb(19, 21, 55) 100%);
   color: white;
   font-family: "Barlow Semi Condensed", sans-serif;
@@ -17,7 +17,13 @@
   padding-top: 50px;
 }
 
-.buttons-container{
+.hand-circles-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.buttons-container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
