--- a/src/button/button.component.scss
+++ b/src/button/button.component.scss
@@ -12,9 +12,9 @@
   letter-spacing: 2px;
   font-size: 16px;
   font-family: "Barlow Semi Condensed", sans-serif;
-}
 
-.button:hover {
-  background-color: #fff !important;
-  color: #3B4363;
+  &:hover {
+    background-color: #fff !important;
+    color: #3B4363;
+  }
 }
