--- a/src/hand-circle/hand-circle.component.html
+++ b/src/hand-circle/hand-circle.component.html
@@ -4,6 +4,9 @@
      'colored-border--yellow': hand === handEnum.Scissors,
      'colored-border--red': hand === handEnum.Rock,
      'colored-border--lightblue': hand === handEnum.Spock,
-     'colored-border--violet': hand === handEnum.Lizard}">
-  <div class="white-circle"></div>
+     'colored-border--violet': hand === handEnum.Lizard}"
+     (click)="handClicked.emit()">
+  <div class="white-circle">
+    <img class="hand-icon" [src]="'assets/'+ (hand | handIcon)">
+  </div>
 </div>
