--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,13 +17,8 @@
   padding-top: 50px;
 }
 
-.hand-circles-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
 .buttons-container {
+  padding-top: 40px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
