--- a/src/components/hand-circles-container/hand-circles-container.component.scss
+++ b/src/components/hand-circles-container/hand-circles-container.component.scss
@@ -10,16 +10,19 @@
     display: flex;
     justify-content: center;
 
-    &--second {
+    &--second-advanced {
       justify-content: space-between;
+      padding-top: 20px;
     }
 
-    &--third {
+    &--second-basic {
+      justify-content: space-between;
+      padding-top: 70px;
+    }
+
+    &--third-advanced {
       justify-content: space-around;
+      padding-top: 40px;
     }
-  }
-
-  .row-padding {
-    padding-top: 20px;
   }
 }
