--- a/src/app/components/hand-circles-container/hand-circles-container.component.html
+++ b/src/app/components/hand-circles-container/hand-circles-container.component.html
@@ -1,5 +1,5 @@
 <div class="rows-container">
-  <ng-container *ngIf="gameType === gameTypeEnum.Advanced; else basicGameMode">
+  <ng-container *ngIf="(gameType$ | async) === gameTypeEnum.Advanced; else basicGameMode">
     <div class="circles-row">
       <app-hand-circle [hand]="handEnum.Scissors" (handClicked)="handClicked(handEnum.Scissors)"></app-hand-circle>
     </div>
