feature: add score to state

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="content">
     <div class="header-container">
-      <app-header [score]="2" [gameType]="gameTypeEnum.Advanced"></app-header>
+      <app-header></app-header>
     </div>
     <app-hand-circles-container></app-hand-circles-container>
     <app-buttons-container></app-buttons-container>
