--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,9 +1,9 @@
-.score-frame {
+.header-frame {
   border: 2px solid #606e85;
   border-radius: 8px;
   padding: 20px;
 
-  min-height: 100px;
+  height: 100px;
   font-weight: 700;
   color: #fff;
 
@@ -39,17 +39,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
 
-.score-label {
-  color: #8697E4;
-  text-transform: uppercase;
-  font-size: 15px;
-  letter-spacing: 2px;
-}
+  .score-label {
+    color: #8697E4;
+    text-transform: uppercase;
+    font-size: 15px;
+    letter-spacing: 2px;
+  }
 
-.score-value {
-  color: #3B4363;
-  font-size: 56px;
-  line-height: 56px;
+  .score-value {
+    color: #3B4363;
+    font-size: 56px;
+    line-height: 56px;
+  }
 }
