feature: add rules pop up

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,5 @@
     <app-buttons-container></app-buttons-container>
   </div>
 </div>
+<app-rules-overlay *ngIf="showRulesPopup$ | async"></app-rules-overlay>
+
