--- a/src/app/components/buttons-container/buttons-container.component.html
+++ b/src/app/components/buttons-container/buttons-container.component.html
@@ -1,5 +1,5 @@
 <div class="buttons-container">
-  <app-button [label]="'rules'"></app-button>
+  <app-button [label]="'rules'" (clicked)="showRulesPopup()"></app-button>
   <app-button [label]="(gameModeLabel$ | async)" (clicked)="changeGameType()"></app-button>
   <app-button [label]="'reset'" (clicked)="resetScore()"></app-button>
 </div>
