--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,5 +1,7 @@
+@import '../../../variables';
+
 .header-frame {
-  border: 2px solid #606e85;
+  border: 2px solid $border-color;
   border-radius: 8px;
   padding: 20px;
 
@@ -41,14 +43,14 @@
   justify-content: space-between;
 
   .score-label {
-    color: #8697E4;
+    color: $light-text;
     text-transform: uppercase;
     font-size: 15px;
     letter-spacing: 2px;
   }
 
   .score-value {
-    color: #3B4363;
+    color: $dark-text;
     font-size: 56px;
     line-height: 56px;
   }
