feature: style circles to follow rules popup

--- a/src/app/components/hand-circle/hand-circle.component.scss
+++ b/src/app/components/hand-circle/hand-circle.component.scss
@@ -27,6 +27,10 @@
     }
   }
 
+  &:active {
+    transform: scale(0.9);
+  }
+
   &--blue {
     @include colored-circle(hsl(230, 89%, 62%), hsl(230, 89%, 65%), #2944c2);
   }
