--- a/src/app/components/hand-circles-container/hand-circles-container.component.scss
+++ b/src/app/components/hand-circles-container/hand-circles-container.component.scss
@@ -11,14 +11,17 @@
     display: flex;
     justify-content: center;
 
-    &--second-advanced {
+    &--first-basic {
       justify-content: space-between;
-      padding-top: 20px;
     }
 
     &--second-basic {
-      justify-content: space-between;
       padding-top: 70px;
+    }
+
+    &--second-advanced {
+      justify-content: space-between;
+      padding-top: 20px;
     }
 
     &--third-advanced {
