--- a/src/app/components/hand-circle/hand-circle.component.html
+++ b/src/app/components/hand-circle/hand-circle.component.html
@@ -1,5 +1,6 @@
 <div class="colored-border"
      [ngClass]="{
+     'colored-border--big': size===circleSizeEnum.Big,
      'colored-border--blue': hand === handEnum.Paper,
      'colored-border--yellow': hand === handEnum.Scissors,
      'colored-border--red': hand === handEnum.Rock,
