--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,6 @@
 .container {
   background-image: radial-gradient(circle at center top, rgb(31, 55, 87) 20%, rgb(19, 21, 55) 100%);
   color: white;
-  font-family: "Barlow Semi Condensed", sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -15,5 +14,5 @@
 }
 
 .header-container {
-  padding-top: 50px;
+  padding: 50px 0;
 }
