--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -1,5 +1,7 @@
+@import "../../../variables";
+
 .button {
-  border: 2px solid #606e85;
+  border: 2px solid $border-color;
   border-radius: 4px;
   padding: 6px 12px;
   background-color: transparent;
@@ -11,10 +13,10 @@
   cursor: pointer;
   letter-spacing: 2px;
   font-size: 16px;
-  font-family: "Barlow Semi Condensed", sans-serif;
+  font-family: $font-family;
 
   &:hover {
     background-color: #fff !important;
-    color: #3B4363;
+    color: $dark-text;
   }
 }
