--- a/src/app/components/hand-circles-container/hand-circles-container.component.scss
+++ b/src/app/components/hand-circles-container/hand-circles-container.component.scss
@@ -1,6 +1,7 @@
 .rows-container {
-  padding: 50px 0;
+
   width: 50%;
+  padding: 0 0 50px 0;
   height: 350px;
   display: flex;
   flex-direction: column;
