--- a/src/app/components/hand-circle/hand-circle.component.scss
+++ b/src/app/components/hand-circle/hand-circle.component.scss
@@ -3,6 +3,14 @@
   box-shadow: 0 10px 0 -5px $shadow-color;
 }
 
+@keyframes winner {
+  100% {
+    box-shadow: 0 0 0 30px rgb(255 255 255 / 2%),
+                0 0 0 60px rgb(255 255 255 / 4%),
+                0 0 0 90px rgb(255 255 255 / 6%);
+  }
+}
+
 .colored-border {
   width: 100px;
   height: 100px;
@@ -37,6 +45,11 @@
     }
   }
 
+  &--winner {
+    animation: 1s ease 0s 1 normal forwards running winner;
+  }
+
+
   &:active {
     transform: scale(0.9);
   }
@@ -61,4 +74,5 @@
     @include colored-circle(hsl(261, 73%, 60%), hsl(261, 72%, 63%), #5e36ac);
   }
 }
+
 
