--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,12 +5,22 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 10px;
 }
 
-.content {
-  width: 50%;
-  min-width: 600px;
-  max-width: 800px;
+@media only screen and (min-width: 600px) {
+  .content {
+    width: 50%;
+    min-width: 600px;
+    max-width: 800px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .content {
+    width: 100%;
+    padding: 0 10px;
+  }
 }
 
 .header-container {
