--- a/src/app/components/game-results/game-results.component.html
+++ b/src/app/components/game-results/game-results.component.html
@@ -1,5 +1,5 @@
 <div class="game-results-container">
-  <div class="column">
+  <div class="column side-column">
     <div class="picked-text">you picked</div>
     <div>
       <app-hand-circle [hand]="leftPlayerHand$ | async" [size]="circleSizeEnum.Big" [isWinner]="isLeftWinner$ | async"></app-hand-circle>
@@ -9,8 +9,8 @@
     <div class="winner-text">{{winner$ | async | resultText}}</div>
     <button class="play-again-button" (click)="playAgain()">play again</button>
   </div>
-  <div class="column">
-    <div class="picked-text">the house picked</div>
+  <div class="column side-column side-column--right">
+    <div class="picked-text">house picked</div>
     <div>
       <app-hand-circle [hand]="rightPlayerHand$ | async" [size]="circleSizeEnum.Big" [isWinner]="isRightWinner$ | async"></app-hand-circle>
     </div>
